--- a/src/app/agent-settinga/agent-settinga.component.html
+++ b/src/app/agent-settinga/agent-settinga.component.html
@@ -675,7 +675,7 @@
         Please Upgrade your package
     </div>
 </div> 
-<div class="col-md-6 {{this.wall_5}}">
+<!-- <div class="col-md-6 {{this.wall_5}}">
 
     <div class="form-check form-check-inline">
         <div class="pretty p-switch p-fill">
@@ -688,8 +688,8 @@
     <div class="hidden-things">
         Please Upgrade your package
     </div>
-</div> 
-<div class="col-md-6 {{this.wall_6}}">
+</div>  -->
+<!-- <div class="col-md-6 {{this.wall_6}}">
 
     <div class="form-check form-check-inline">
         <div class="pretty p-switch p-fill">
@@ -702,7 +702,7 @@
     <div class="hidden-things">
         Please Upgrade your package
     </div>
-</div>
+</div> -->
 <div class="col-md-6 {{this.wall_8}}">
 
     <div class="form-check form-check-inline">
@@ -717,7 +717,7 @@
         Please Upgrade your package
     </div>
 </div>  
-<div class="col-md-6 {{this.wall_9}}">
+<!-- <div class="col-md-6 {{this.wall_9}}">
 
     <div class="form-check form-check-inline">
         <div class="pretty p-switch p-fill">
@@ -730,7 +730,7 @@
     <div class="hidden-things">
         Please Upgrade your package
     </div>
-</div>  
+</div>   -->
 <div class="col-md-6 {{this.h_2fa}}">
     <div class="form-check form-check-inline">
         <div class="pretty p-switch p-fill">
@@ -1403,7 +1403,7 @@
         Please Upgrade your package
     </div>
 </div> 
-<div class="col-md-6 {{this.wall_5}}">
+<!-- <div class="col-md-6 {{this.wall_5}}">
 
     <div class="form-check form-check-inline">
         <div class="pretty p-switch p-fill">
@@ -1416,8 +1416,8 @@
     <div class="hidden-things">
         Please Upgrade your package
     </div>
-</div> 
-<div class="col-md-6 {{this.wall_6}}">
+</div>  -->
+<!-- <div class="col-md-6 {{this.wall_6}}">
 
     <div class="form-check form-check-inline">
         <div class="pretty p-switch p-fill">
@@ -1430,7 +1430,7 @@
     <div class="hidden-things">
         Please Upgrade your package
     </div>
-</div>
+</div> -->
 <div class="col-md-6 {{this.wall_8}}">
 
     <div class="form-check form-check-inline">
@@ -1445,7 +1445,7 @@
         Please Upgrade your package
     </div>
 </div>  
-<div class="col-md-6 {{this.wall_9}}">
+<!-- <div class="col-md-6 {{this.wall_9}}">
 
     <div class="form-check form-check-inline">
         <div class="pretty p-switch p-fill">
@@ -1458,7 +1458,7 @@
     <div class="hidden-things">
         Please Upgrade your package
     </div>
-</div> 
+</div>  -->
 <div class="col-md-6 {{this.h_2fa}}">
 
     <div class="form-check form-check-inline">
