--- a/src/app/global-settings/global-settings.component.html
+++ b/src/app/global-settings/global-settings.component.html
@@ -105,7 +105,7 @@
                                 </div>
                             </div>
                         </div> 
-                        <!-- <div class="col-md-4"  *ngIf="has_voice">
+                        <div class="col-md-4"  *ngIf="has_voice">
                             <div class="form-panel">
                                 <label for="Webrtc">Select WEBRTC Server</label>
                                 <select  name="Webrtc"  id="webrtc_server" class="form-control" >
@@ -113,7 +113,7 @@
                                     <option *ngFor="let time of server_list" value="{{time.server_id}}"  [selected]="time.server_id == this.server_ID">{{time.server_name}}</option>
                                 </select>
                             </div>
-                        </div>  -->
+                        </div> 
                         <div class="col-md-12" *ngIf="has_voice">
                             <div class="form-panel">
                                 <div class="row">
