--- a/src/app/mc/dialpad/dialpad.component.html
+++ b/src/app/mc/dialpad/dialpad.component.html
@@ -385,12 +385,12 @@
     </div>
 </div>
 <div class="contact-panel" *ngIf="dialPadActionview =='user_list'">
-    <div class="search-field"><input class="form-control" type="text" name="searchfield" placeholder="Search User Calls" id="user_list_search" (keyup)="userListSearch(this)"></div>
+    <div class="search-field"><input class="form-control" type="text" name="searchfield" placeholder="Search Contacts" id="user_list_search" (keyup)="userListSearch(this)"></div>
     <div class="tab-content-data">
         <div id="userList" class="tab-pane in active">
 
-            <div class="contact-list-item" *ngFor="let user_list of dialpadUserList;" (click)="dialPadDetailView('user_detail_view',user_list.user_id)">
-                <div class="contact-number-details"><span class="user-img"><img src="assets/images/user.jpg"></span><h5>{{user_list.user_name}}</h5></div>
+            <div class="contact-list-item" *ngFor="let user_list of dialpadUserList;" (click)="copynumber(user_list.sip_login)">
+                <div class="contact-number-details" style="display: flex;"><span class="user-img"><img src="assets/images/user.jpg"></span><h5>{{user_list.sip_login}} - {{user_list.agent_name}}</h5></div>
             </div>
 
         </div>
